--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ioredis": "^4.23.0",
     "jsonwebtoken": "^8.5.1",
     "monoswap": "0.3.10",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "npm": "^7.6.1",
     "pg": "^8.5.1",
@@ -78,6 +79,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/node-cron": "^2.0.4",
     "apollo": "^2.32.5",
     "apollo-server-testing": "^2.21.0",
     "chai": "^4.3.0",
