Call trace to get campaigns

--- a/config/example.env
+++ b/config/example.env
@@ -24,3 +24,4 @@ DEFAULT_ORGANISATION=giveth
 SEED_PASSWORD=qweqweqwe
 SERVER_ADMIN=admin@giveth.io
 UPLOAD_FILE_MAX_SIZE=1600000
+TRACE_BACKEND_URL=https://feathers.develop.giveth.io
